--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -14,7 +14,6 @@ body,
 .App {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 }
 
 .content {
@@ -22,6 +21,7 @@ body,
 	width: 100%;
 	max-width: 800px;
 	margin: 0 auto;
+
 	& section {
 		margin: 5px 20px;
 	}
